# otus_C

./: .gitignore  CMakeLists.txt  README.md
hw_01/: CMakeLists.txt  main.c
hw_02/: .gitignore  CMakeLists.txt  charset.h  main.c
hw_03/: CMakeLists.txt
hw_03/maplib/: CMakeLists.txt  maplib.h
hw_03/maplib/impl/: map_str_int.h  maplib.c
hw_03/wordcount/: CMakeLists.txt  hash.c  hash.h  main.c
hw_06/: memory-leak.patch
hw_07/: README.md  aclocal.m4  config.status  configure  curl-config  libcurl.pc  libtool
hw_07/autom4te.cache/: output.0  requests  traces.0  traces.1
hw_07/lib/: curl_config.h  curl_config.h.in  libcurl.la  libcurl_la-altsvc.lo  libcurl_la-amigaos.lo  libcurl_la-asyn-ares.lo  libcurl_la-asyn-thread.lo  libcurl_la-base64.lo  libcurl_la-bufq.lo  libcurl_la-bufref.lo  libcurl_la-c-hyper.lo  libcurl_la-cf-h1-proxy.lo  libcurl_la-cf-h2-proxy.lo  libcurl_la-cf-haproxy.lo  libcurl_la-cf-https-connect.lo  libcurl_la-cf-socket.lo  libcurl_la-cfilters.lo  libcurl_la-conncache.lo  libcurl_la-connect.lo  libcurl_la-content_encoding.lo  libcurl_la-cookie.lo  libcurl_la-curl_addrinfo.lo  libcurl_la-curl_des.lo  libcurl_la-curl_endian.lo  libcurl_la-curl_fnmatch.lo  libcurl_la-curl_get_line.lo  libcurl_la-curl_gethostname.lo  libcurl_la-curl_gssapi.lo  libcurl_la-curl_memrchr.lo  libcurl_la-curl_multibyte.lo  libcurl_la-curl_ntlm_core.lo  libcurl_la-curl_ntlm_wb.lo  libcurl_la-curl_path.lo  libcurl_la-curl_range.lo  libcurl_la-curl_rtmp.lo  libcurl_la-curl_sasl.lo  libcurl_la-curl_sspi.lo  libcurl_la-curl_threads.lo  libcurl_la-curl_trc.lo  libcurl_la-dict.lo  (+93 more)
hw_07/lib/.deps/: base64.Po  curl_multibyte.Po  dynbuf.Po  libcurl_la-altsvc.Plo  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-bufq.Plo  libcurl_la-bufref.Plo  libcurl_la-c-hyper.Plo  libcurl_la-cf-h1-proxy.Plo  libcurl_la-cf-h2-proxy.Plo  libcurl_la-cf-haproxy.Plo  libcurl_la-cf-https-connect.Plo  libcurl_la-cf-socket.Plo  libcurl_la-cfilters.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_get_line.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  (+107 more)
hw_07/src/: curl
hw_08/: CMakeLists.txt  gstmyelement.c  gstmyelement.h
hw_08/test/: run.sh
hw_09/test/: main.c
hw_10/: README.md
hw_10/src/: demonize.c  demonize.h  main.c  single_process.c  single_process.h
hw_11/: Makefile  crc32.h  main.c  readme.md
hw_12/: .gitignore  CMakeLists.txt
hw_12/parselogs/: CMakeLists.txt  main.c
hw_13/: .gitignore  CMakeLists.txt  README.md
hw_13/src/: CMakeLists.txt  buffer.c  buffer.h  main.c
hw_14/: .gitignore  CMakeLists.txt  README.md
hw_14/fileserver/: CMakeLists.txt  buffer.c  buffer.h  connection.c  main.c  signal_helpers.h  sock_helpers.c  sock_helpers.h
hw_14/sflog/: CMakeLists.txt  sflog.h
hw_15/: CMakeLists.txt  README.md  main.c
hw_16/: CMakeLists.txt
(+112 files in other folders)
